--- a/css/index.css
+++ b/css/index.css
@@ -2,25 +2,26 @@ body,
 html {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 .chess-board {
-    padding: 2%;
+    /*padding: 2%; */
     width: 96vmin;
     height: 96vmin;
 }
 
 .chess-board-row {
     display: flex;
-    height: 12%;
-    width: 96%;
+    height: 12.5%;
+    width: 100%;
     flex-direction: row;
 }
 
 .chess-board-block {
     box-sizing: border-box;
     height: 100%;
-    width: 12%;
+    width: 12.5%;
 }
 
 .chess-board-block-black {
