--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,9 @@ html {
     width: 100%;
     bottom: 0;
     height: 2vmin;
-    background-color: blue;
+    font-size: 2vmin;
+    background-color: gray;
+    color: black;
     margin: 0;
 }
 
